syntax = "proto3";
package data;
// import "common/common.proto";

option go_package = "grpc/proto";

message Credentials{
    string name = 1;
    string login = 2;
    string password = 3;
    string metainfo = 4;
}

service DataController{
    rpc StoreCredentials(StoreCredentialsRequest) returns (StoreCredentialsResponse);
    rpc GetCredentials(GetCredentialsRequest) returns (GetCredentialsResponse);
    rpc EditCredentials(EditCredentialsRequest) returns (EditCredentialsResponse);
    rpc DeleteCredentials(DeleteCredentialsRequest) returns (DeleteCredentialsResponse);
}

message StoreCredentialsRequest{
    Credentials credentials = 1;
}

message StoreCredentialsResponse{
    string error = 1;
}

message GetCredentialsRequest{
    string name = 1;
}

message GetCredentialsResponse{
    Credentials credentials = 1;
    string error = 2;
}

message EditCredentialsRequest{
    Credentials credentials = 1;
}

message EditCredentialsResponse{
    string name = 1;
}

message DeleteCredentialsRequest{
    string name = 1;
}

message DeleteCredentialsResponse{
    string error = 1;
}